
2017-08-28  Edward Hart <edward.dan.hart@gmail.com>

	* field.c (validate_field_1): refactored.

2017-08-23  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c (cobc_clean_up): added calls to (plex_call_destroy) and
	  (ylex_call_destroy), *actually* fixing bug #407.
	* pplex.l (ylex_clear_all): added calls to (cb_reset_78) and
	  (cb_reset_global_78) to prevent memory leak on abort (bug #417).

2017-08-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c: work on expression warning messages and added more

2017-08-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, flag.def, warnings.def, cobc.h: changed handling for cobc --help,
	  mainly to provide translators with context for msgids
	* field.c: adjusted message for cb_warn_ignored_initial_val

2017-08-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* flag.def: always activate cb_flag_recursive_check by CB_FLAG_ON
	* tree.c, codegen.c: assume RECURSIVE for -fno-recursive-check

2017-08-18  Ron Norman <rjn@inglenet.com>

	* codegen.c: emit code for CALL to handle ON EXCEPTION

2017-08-17  Ron Norman <rjn@inglenet.com>

	* scanner.l: Added SET_LOCATION when returning 'literal'
	             which is a 78/01 constant
	* codegen.c: Emit cob_module_global_entry instead of cob_module_enter and
	  pass the 'entry' value (currently only set in rw-branch).

2017-08-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c: work on expression warning messages

2017-08-18  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (screen_occurs_clause): marked as pending.

2017-08-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c: bug #413 don't generate cob_check_based for UDF return fields
	* cobc.c (xref_print): output marker for receiving references

2017-08-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c: fixed tree cast error for literals

2017-08-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
